# MLflow-Practice

./: .gitignore  README.md
Models/ModelEvaluation/: main.py  pyproject.toml
