[tool.poetry]
name = "modelevaluation"
version = "0.1.0"
description = ""
authors = ["Seungha Son <linuxias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
xgboost = "^1.7.5"
shap = "^0.41.0"
mlflow = "^2.2.2"
scikit-learn = "^1.2.2"
numpy = "1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
